--- a/blogspot.html
+++ b/blogspot.html
@@ -5,10 +5,13 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de Inicio donde vamos a explicar las cosas increibles de que se pueden hacer con estas ramas</p>
             </div>
         </div>
+    </div>
     </body>
  </html>
