--- a/blogspot.html
+++ b/blogspot.html
@@ -1,21 +1,23 @@
- <html>
+<html>
     <head> 
         <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">
+        <div id="cabecera">
                 Hyperblog <span id="tagline">Tu blog de confianza</span>
             </div>
-                <div id="post">
-                    <h1>Este es el titulo atractivo e
-                         interesante del post</h1>
-                    <p>Y este es el parrafo de 
-                        Inicio donde vamos a explicar 
-                        las cosas increibles de que se 
-                        pueden hacer con estas ramas</p>
-                </div>
+            <div id="post">
+                <h1>Este es el titulo atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de Inicio donde vamos a explicar las cosas increibles de que se pueden hacer con estas ramas</p>
+                <p>Los blog son la mejor forma de compartir informacion
+                    y tus ideas. Mucho mas que ir a conferencias o salir
+                    en Youtube. Excepto si eres un rockstar. Pero estadisticamente
+                    no lo eres... por ahora.
+                </p>
+            </div>
         </div>
     </body>
  </html>
+
